appId: com.neurorif.simba
---
- assertVisible: bulbasaur
- assertVisible: ivysaur
- assertVisible: venusaur
- tapOn:
    id: pokemon-0
- assertVisible: Favorite
- stopApp
- launchApp
- assertVisible: Favorite
